@@ -9,15 +9,15 @@
 </TEXTAREA></TD>
 <TD WIDTH=20px ALIGN=LEFT VALIGN=TOP><BR></TD>
 <TD ALIGN=LEFT VALIGN=TOP>
-<a href="javascript:sendTextField();"><TABLE WIDTH=57 HEIGHT=23 BACKGROUND="lilButt.gif"  style="cursor:hand" ONCLICK="sendTextField();" TABINDEX=1 BORDER=0 CELLSPACING=0 CELLPADDING=0><TR VALIGN=CENTER><TD ALIGN=CENTER><FONT color=purple SIZE=-2><B>Submit</B></FONT></a></TD></TR></TABLE></a>
+<a href="javascript:sendTextField();"><TABLE WIDTH=57 HEIGHT=23 BACKGROUND="lilButt.gif"  style="cursor:hand" ONCLICK="sendTextField(event);" TABINDEX=1 BORDER=0 CELLSPACING=0 CELLPADDING=0><TR VALIGN=CENTER><TD ALIGN=CENTER><FONT color=purple SIZE=-2><B>Submit</B></FONT></a></TD></TR></TABLE></a>
 </TD></TR></TABLE>
 <TD WIDTH=10% ALIGN=CENTER VALIGN=TOP>
-<a href="javascript:top.term.openWindow();"><TABLE WIDTH=57 HEIGHT=23 BACKGROUND="lilButt.gif"  style="cursor:hand" ONCLICK="top.term.openWindow();" TABINDEX=1 BORDER=0 CELLSPACING=0 CELLPADDING=0><TR VALIGN=CENTER><TD ALIGN=CENTER><FONT color=purple SIZE=-2><B>New</B></FONT></a></TD></TR></TABLE></a>
+<a href="javascript:newWindow();"><TABLE WIDTH=57 HEIGHT=23 BACKGROUND="lilButt.gif"  style="cursor:hand" ONCLICK="newWindow(event);" TABINDEX=1 BORDER=0 CELLSPACING=0 CELLPADDING=0><TR VALIGN=CENTER><TD ALIGN=CENTER><FONT color=purple SIZE=-2><B>New</B></FONT></a></TD></TR></TABLE></a>
 </TD>
 <TD WIDTH=10% ALIGN=CENTER VALIGN=TOP>
-<a href="javascript:disconnect();"><TABLE WIDTH=57 HEIGHT=23 BACKGROUND="lilButt.gif"  style="cursor:hand" ONCLICK="disconnect();" TABINDEX=1 BORDER=0 CELLSPACING=0 CELLPADDING=0><TR VALIGN=CENTER><TD ALIGN=CENTER><FONT color=purple SIZE=-2><B>Quit</B></FONT></a></TD></TR></TABLE></a>
+<a href="javascript:disconnect();"><TABLE WIDTH=57 HEIGHT=23 BACKGROUND="lilButt.gif"  style="cursor:hand" ONCLICK="disconnect(event);" TABINDEX=1 BORDER=0 CELLSPACING=0 CELLPADDING=0><TR VALIGN=CENTER><TD ALIGN=CENTER><FONT color=purple SIZE=-2><B>Quit</B></FONT></a></TD></TR></TABLE></a>
 <BR>
-<a href="javascript:reconnect();"><TABLE WIDTH=57 HEIGHT=23 BACKGROUND="lilButt.gif"  style="cursor:hand" ONCLICK="reconnect();" TABINDEX=1 BORDER=0 CELLSPACING=0 CELLPADDING=0><TR VALIGN=CENTER><TD ALIGN=CENTER><FONT color=purple SIZE=-2><B>Reconnect</B></FONT></a></TD></TR></TABLE></a>
+<a href="javascript:reconnect();"><TABLE WIDTH=57 HEIGHT=23 BACKGROUND="lilButt.gif"  style="cursor:hand" ONCLICK="reconnect(event);" TABINDEX=1 BORDER=0 CELLSPACING=0 CELLPADDING=0><TR VALIGN=CENTER><TD ALIGN=CENTER><FONT color=purple SIZE=-2><B>Reconnect</B></FONT></a></TD></TR></TABLE></a>
 </TD></TR></TABLE>
 </FORM>
 
@@ -26,6 +26,17 @@
     String.prototype.trim = function() { return this.replace(/^\s+|\s+$/, ''); };
     var input=new Array(0);
     var position=-1;
+    
+    function newWindow(event)
+    {
+    	if(event)
+    	{
+            event.cancelBubble=true;
+            event.returnValue=0;
+        }
+    	top.term.openWindow();
+    	return false;
+    }
     
     function enqueText(s)
     {
@@ -71,9 +82,15 @@
     {
         top.term.closeWindow();
     }
-    function reconnect()
+    function reconnect(event)
     {
+    	if(event)
+    	{
+            event.cancelBubble=true;
+            event.returnValue=0;
+        }
         top.term.reconnect();
+        return false;
     }
     
     function keydown(event,textEl)
